--- a/styles.css
+++ b/styles.css
@@ -92,5 +92,15 @@ main{
     padding: 10px 20px;
 }
 
+#resultDiv{
+    display: none;
+}
+
+.number-background {
+    background-color: #403c3c;  
+    padding: 2px 5px;                         
+    border-radius: 5px;      
+}
+
 
 /* Main */
